--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -20,4 +20,7 @@
   </li>
 </ul>
 
-<router-outlet></router-outlet>
+<section class="container-fluid">
+  <router-outlet></router-outlet>
+</section>
+
