--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,25 +6,25 @@
       <h4 class="card-title">AngularJS Greeting</h4>
       <label for="name">Type your name here:</label>
       <!-- Handling input with two-way binding -->
-      <input type='text' [(ngModel)]='myModel' />
+      <input id='name' type='text' [(ngModel)]='myModel' />
       <!-- Binding with interpolation -->
       <p>Hello {{myModel}}!</p>
   </div>
 </div>
 
-<!-- <div class="card bg-light mt-3">
+<div class="card bg-light mt-3">
   <div class="card-header">Get data (from another container)</div>
   <div class="card-body">
       <h4 class="card-title">Get Dogs</h4>
       <label for="url">Type URL for API call:</label>
-      <input id="url" type="text" ng-model="vm.apiUrl">
-      <p>API URL {{vm.apiUrl}}</p>
-      <button ng-click="vm.getDogs()" class="btn btn-primary">Get Dogs</button>
-      <div ng-repeat="dog in vm.dogs">
+      <input id="url" type="text" [(ngModel)]='apiUrl'>
+      <p>API URL {{apiUrl}}</p>
+      <button (click)='getDogs()' class="btn btn-primary">Get Dogs</button>
+      <div ng-repeat="dog in dogs">
           {{dog}}
       </div>
     </div>
-</div> -->
+</div>
 
 <!-- <div class="card bg-light mt-3">
   <div class="card-header">Test Toastr</div>
